add JS variables to grab necessary elements

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
 
         <section id="quiz-questions">
-            <h1>Some Question</h1>
+            <h1 id="question">Some Question</h1>
             <section id="answer-container">
                 <button id="answer1"> some answer</button>
                 <button id="answer2"> some answer</button>
@@ -50,7 +50,7 @@
             </form>
             <section>
                 <button id="goBack">Go Back</button>
-                <button id="toScores">See Scores</button>
+                <a href="./pages/highscore.html"><button id="toScores">See Scores</button></a>
             </section>
         </section>
     </main>
