add javascript to complete quiz, create necessary functions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Quiz!</title>
     <link rel="stylesheet" href="./assets/reset.css"/>
     <link rel="stylesheet" href="./assets/style.css"/>
 </head>
@@ -34,10 +34,10 @@
         <section id="quiz-questions">
             <h1 id="question">Some Question</h1>
             <section id="answer-container">
-                <button id="answer1"> some answer</button>
-                <button id="answer2"> some answer</button>
-                <button id="answer3"> some answer</button>
-                <button id="answer4"> some answer</button>
+                <button id="answer1" class="choice"> some answer</button>
+                <button id="answer2" class="choice"> some answer</button>
+                <button id="answer3" class="choice"> some answer</button>
+                <button id="answer4" class="choice"> some answer</button>
             </section>
         </section>
 
@@ -52,6 +52,9 @@
                 <button id="goBack">Go Back</button>
                 <a href="./pages/highscore.html"><button id="toScores">See Scores</button></a>
             </section>
+        </section>
+        <section id="answers">
+
         </section>
     </main>
     <script src="./assets/script.js"></script>
