add sound effects

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>JavaScript Quiz!</title>
     <link rel="stylesheet" href="./assets/reset.css"/>
     <link rel="stylesheet" href="./assets/style.css"/>
+    <audio src="./assets/sounds/Notice-sound-effect.mp3" id="good"></audio>
+    <audio src="./assets/sounds/Wrong-answer-sound-effect.mp3" id="bad"></audio>
 </head>
 <body>
     <header>
