add script for saving to local storage;  add second CSS and script file for highscores page; add style for high scores page; add script for highscores page; adjust CSS for index page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1>All Done!</h1>
             <h3>Your final score is <span id="yourScore"></span></h3>
             <form id="inputInitials">
-                <p>Input Your Initials: <input type="text"></input></p>
+                <p>Input Your Initials: <input type="text" id="userInitials"></input></p>
                 <button id="submitScore">Submit</button>
             </form>
             <section>
