--- a/pages/highscore.html
+++ b/pages/highscore.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link type="style/css" rel="stylesheet" href="../assets/reset.css"/>
-    <link type="style/css" rel="stylesheet" href="../assets/style.css"/>
+    <link rel="stylesheet" href="../assets/reset.css"/>
+    <link rel="stylesheet" href="../assets/style2.css"/>
 </head>
 <body>
-    
-    <script src="../assets/script.js"></script>
+    <h1 id="scores">High Scores</h1>
+    <table id="theScores">
+        <tr>
+            <th>Initials</th>
+            <th>Score</th>
+    </table>
+
+    <section id = "noScores">
+        <p>
+            No Scores Yet!
+        </p>
+    </section>
+
+    <section>
+        <a href="../index.html"><button>Back to Quiz</button></a>
+        <button id="clearScores">Clear Scores</button>
+    </section>
+
+    <script src="../assets/script2.js"></script>
 </body>
 </html>
